# STATE-Bench

./: .env.example  .gitignore  .pre-commit-config.yaml  AGENT_LEARNING_TRACK.md  CHANGELOG.md  LICENSE  MEMORY_TRACK.md  README.md  RUN_BENCHMARK.md  USE_CUSTOM_CLIENT.md  _date_fix_customer_support.md  pyproject.toml
.github/workflows/: ci.yml  pages.yml
.leaderboard/: index.html  leaderboard.js  mockup-arena.html  mockup-dashboard.html  mockup-official.html  styles.css  variants.css
datasets/train_task_trajectories/customer_support/: 100-challenge_warranty_maxed_return_option.json  102-hard_price_match_split_tender.json  13-cancel_partial.json  (+97 more)
docs/: AGENT_LEARNING_TRACK.md  RUN_BENCHMARK.md  USE_CUSTOM_CLIENT.md  _CUSTOM_CLIENT_ADVANCED.md  submit.md
docs/agents/: builtin.md  custom-client.md
docs/eval/: compute-metrics.md  cost-reporting.md  run-batch.md
docs/memory/: builtin-hook.md  custom-hook.md
docs/setup/: eval-client.md
state_bench/: client.py  domain.py  env_loader.py  orchestrator.py  paths.py  protocol.py  schemas.py  scoring.py  simulator.py  version.py
state_bench/agents/: __init__.py  base.py  loader.py  state_bench.py
state_bench/configs/: llm.yaml
state_bench/scripts/: compute_metrics.py  run_batch.py  run_task.py  score.py
tests/: test_agent_discovery.py  test_agent_runtime_hooks.py  test_agent_turn.py  test_client_auth.py  test_compute_metrics.py  test_domain_pipeline_invariants.py  test_env_loader.py  test_learning_retrieval_pipeline.py  test_protocol.py  test_public_surface.py  test_score_state_requirements.py  test_scoring.py
(+1102 files in other folders)
