[project]
name = "state-bench"
version = "0.5.0"
description = "STATE-Bench: multi-domain benchmark for evaluating procedural memory in AI agents"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }

dependencies = [
    "openai>=1.0.0",
    "azure-identity>=1.15.0",
    "python-dotenv>=1.0.0",
    "pyyaml>=6.0",
    "tiktoken>=0.12.0",
    "tenacity>=9.1.2",
]

[project.optional-dependencies]
dev = ["pytest>=9.0.3", "pre-commit>=3.0", "ruff>=0.8.6"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["state_bench"]
include = [
    "state_bench/configs/**/*.json",
    "state_bench/configs/**/*.yaml",
    "state_bench/domains/**/*.json",
    "state_bench/domains/**/*.md",
]
force-include = { "datasets/train_task_trajectories" = "datasets/train_task_trajectories" }

[tool.ruff]
line-length = 120
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "pre-commit>=3.0",
    "ruff>=0.8.6",
]
